gitops/apps/browsh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browsh
  namespace: browsh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browsh
  template:
    metadata:
      labels:
        app: browsh
    spec:
      containers:
        - name: browsh
          image: browsh/browsh:v1.8.3
          command: ["/shared/ttyd"]
          args: ["-W", "-s", "0", "-p", "7681", "/shared/dtach", "-A", "/tmp/browsh.sock", "-Ez", "/app/bin/browsh"]
          ports:
            - containerPort: 7681
              protocol: TCP
          volumeMounts:
            - name: shared
              mountPath: /shared
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1536Mi
      volumes:
        - name: shared
          emptyDir: {}
